[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cs224u"
version = "0.0.1"
description = ""
authors = [
]

[tool.poetry.dependencies]
python = "~3.9"

bokeh = "~2.4"
datasets = "~2.0"
gitpython = "~3.1"
ipywidgets = "~8.0"
jupyter-bokeh = "~3.0"
jupyterlab = "~3.4"
jupyterlab-lsp = "~3.10"
matplotlib = "~3.5"
nltk = "~3.7"
optuna = "~3.0"
plotly = "~5.10"
pyarrow = "~8.0"
pyls-isort = "~0.2"
pylsp-mypy = "~0.5"
python-lsp-black = "~1.2"
python-lsp-server = "~1.4"
scikit-learn = "~1.1"
scipy = "~1.8"
spacy = "~3.4"
statsmodels = "~0.13"
torch = "~1.10.1"
torchvision = "~0.11"
transformers = "~4.17"

[tool.poetry.dev-dependencies]
